# XDR--X402-Development-Runtime

./: .gitignore  ADDING_TUI_SUPPORT.txt  Cargo.toml  README.md
crates/xdr-chaos/: Cargo.toml
crates/xdr-chaos/src/: lib.rs
crates/xdr-ledger/: Cargo.toml
crates/xdr-ledger/src/: lib.rs
crates/xdr-proxy/: Cargo.toml
crates/xdr-proxy/src/: lib.rs
crates/xdr-trace/: Cargo.toml
crates/xdr-trace/src/: lib.rs
crates/xdr-tui/: Cargo.toml
crates/xdr-tui/src/: lib.rs
examples/agents/: .env  .env.example  gemini-agent.ts  index.ts  package-lock.json  package.json  tsconfig.json
examples/agents/lib/: tools.ts  xdr-client.ts
src/: main.rs
