[package]
name = "xdr"
version = "0.1.0"
edition = "2021"
description = "x402 Dev Runtime (XDR) - Local simulator for AI Agent payments"

[workspace]
members = ["crates/*"]

[dependencies]
# Internal crates
xdr-proxy = { path = "crates/xdr-proxy" }
xdr-chaos = { path = "crates/xdr-chaos" }
xdr-ledger = { path = "crates/xdr-ledger" }

# Async Runtime
tokio = { version = "1.36", features = ["full"] }

# Web Framework (for the Control Plane API)
axum = "0.7"

# CLI Parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"