[package]
name = "xdr-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "stream",] }
tower-http = { version = "0.5", features = ["trace"] }
url = "2.5"
bytes = "1.5"
http-body-util = "0.1"
hyper = "1.0" 
anyhow = "1.0"